# Cargo.toml
[package]
name = "gpg_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
bcrypt = "0.12"
jsonwebtoken = "8.0"
dotenv = "0.15"
