# Cargo.toml
[package]
name = "gpg_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
actix-multipart = "0.4"
log = "0.4"
env_logger = "0.9"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros"] }
bcrypt = "0.12"
jsonwebtoken = "8.0"
dotenv = "0.15"
